unpackaged/main/default/objects/Funding_Options__c/Funding_Options__c.object-meta.xml
<CustomObject>
    <label>Funding Option</label>
    <nameField>
        <displayFormat>FO-{00000000}</displayFormat>
        <label>Funding Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>