unpackaged/main/default/objects/Funding_Options__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <label>APR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>