unpackaged/main/default/objects/Funding_Options__c/fields/Estimated_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Payment__c</fullName>
    <description>TIL requirement to calculate an estimated monthly payment. Will be used on merge docs</description>
    <formula>IF(
	ISPICKVAL(Payment_Frequency__c, 'Daily'),
	Funding_Repayment_Amount__c / (ROUND(((Number_of_Payments__c / 5) * 7),0) / 30.4),
	IF(
		ISPICKVAL(Payment_Frequency__c, 'Weekly'),
		Funding_Repayment_Amount__c / (ROUND((Number_of_Payments__c * 7),0) / 30.4),
		null
		)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>