unpackaged/main/default/objects/Funding_Options__c/fields/Expected_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Fund_Date__c</fullName>
    <description>This field will be used to capture the date that the transaction is expected to fund based on the funding option's attributes. This will be a field that is populated by an input in the Online Sales Calculator.</description>
    <label>Expected Fund Date</label>
    <type>Date</type>
</CustomField>