unpackaged/main/default/objects/Funding_Options__c/fields/Finance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Finance_Charge__c</fullName>
    <description>Finance charge to be included on the TIL disclosure documents</description>
    <formula>(Funding_Repayment_Amount__c -  Funding_Amount__c) +  Origination_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>