unpackaged/main/default/objects/Funding_Options__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <referenceTo>FPC_Funding_del__c</referenceTo>
    <relationshipLabel>Funding Options</relationshipLabel>
    <relationshipName>Funding_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>