unpackaged/main/default/objects/Funding_Options__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <formula>Funding__r.Lender_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender</label>
    <type>Text</type>
</CustomField>