unpackaged/main/default/objects/Funding_Options__c/fields/Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amount__c</fullName>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>