unpackaged/main/default/objects/Funding_Options__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funding Options</relationshipLabel>
    <relationshipName>Funding_Options</relationshipName>
    <type>Lookup</type>
</CustomField>