unpackaged/main/default/objects/Funding_Options__c/fields/Origination_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Amount__c</fullName>
    <label>Origination Fee ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>