unpackaged/main/default/objects/Funding_Options__c/fields/Origination_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Percent__c</fullName>
    <label>Origination Fee (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>