unpackaged/main/default/objects/Funding_Options__c/fields/Pricing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Mode__c</fullName>
    <label>Pricing Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>