unpackaged/main/default/objects/Funding_Options__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>