unpackaged/main/default/objects/Funding_Options__c/validationRules/option_cannot_be_edited_when_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>option_cannot_be_edited_when_selected</fullName>
    <active>true</active>
    <description>When a Funding Option is Selected, prevent any updates to the details of the option</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISCHANGED( Opportunity__c )),
NOT(ISCHANGED( Funding__c )),
NOT(ISCHANGED(Selected__c)),
NOT(ISCHANGED(Additional_Information__c)),
Selected__c = True,
$Setup.ValidationRules__c.Edit_FO_When_Selected__c = False,
OR(
Funding__r.Lender_Name_Workflow__c = 'National Funding - Platinum WC Funding',
Funding__r.Lender_Name_Workflow__c = 'Quick Bridge Funding'
)
)</errorConditionFormula>
    <errorMessage>Funding Option details cannot be edited once it's been selected</errorMessage>
</ValidationRule>