unpackaged/main/default/objects/Funding_Options__c/validationRules/Specialized_Loan_Retention.validationRule-meta.xml
<ValidationRule>
    <fullName>Specialized_Loan_Retention</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Funding__r.Specialized_Loan__c, "Retention"),
        /* Check if the Loan is currently identified as Retention */
    OR(
        $Profile.Name = "FPC - MCA - Sales User",
        $Profile.Name = "NF - Hybrid Sales",
        $Profile.Name = "NF - WC Sales Manager",
        $Profile.Name = "NF - Working Capital Users"
    ),
        /* Check if the current User is Sales */
    ISCHANGED(Active__c),
    Active__c = TRUE
        /* Check if funding Option is trying to be activated */
)</errorConditionFormula>
    <errorMessage>You are not Authorized to update this record</errorMessage>
</ValidationRule>